<resources>
    <string name="app_name">RepositoryIntern</string>
    <string name="account_fragment_id">ID: 123 456 789</string>
    <string name="title_people">People</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="title_acc_name">Alice Peterson</string>
    <string name="title_language">Каким язык влыдеете?</string>
    <string name="title_location">Где вы находитесь?</string>
    <string name="title_btn_choose">Choose</string>
    <string name="title_btn_subscribe">Subscribe</string>
    <string name="title_btn_unsubscribe">Unsubscribe</string>
    <string name="title_btn_people">People</string>
    <string name="title_btn_questionnaires">Questionnaires</string>
    <string name="title_btn_wishes">Wishes</string>
    <string name="title_about_me">About me</string>
    <string name="title_dream_and_get">Dream and get</string>
    <string name="title_moment">Moments</string>
    <string name="title_chronicles">Chronicles</string>
</resources>